alteração do link do CSS

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="C:\Users\wquin\Desktop\Wilson%20Fau\IPW\RMcss.css">
+        <link rel="stylesheet" href="RMcss.css">
         <style>
             
         </style>
