--- a/principalmasc.html
+++ b/principalmasc.html
@@ -160,6 +160,272 @@
 						</td>
 					</tr>
 				</tr>
+			         <tr>
+					<td rowspan="3"><img class="fotoJogador" src=""</td>
+					<td>
+						<p><b>Data Nascimento</b></p>
+						<p>José I. Fernández Iglesias</p>
+					</td>
+					<tr>
+						<td  colspan="3">
+							<p><b>Data Nascimento</b></p>
+							<p>18/01/1990</p>
+						</td>
+						</tr>
+					<tr>
+						<td colspan="3">
+							<p><b>Posição</b></p>
+							<p>Defesa</p>
+						</td>
+					</tr>
+				 </tr>
+                                 <tr>
+					<td rowspan="3"><img class="fotoJogador" src=""</td>
+					<td>
+						<p><b>Data Nascimento</b></p>
+						<p>Marcelo Vieira da Silva</p>
+					</td>
+					<tr>
+						<td  colspan="3">
+							<p><b>Data Nascimento</b></p>
+							<p>12/05/1988</p>
+						</td>
+						</tr>
+					<tr>
+						<td colspan="3">
+							<p><b>Posição</b></p>
+							<p>Defesa</p>
+						</td>
+					</tr>
+				 </tr>
+                                 <tr>
+					<td rowspan="3"><img class="fotoJogador" src=""</td>
+					<td>
+						<p><b>Data Nascimento</b></p>
+						<p>Ferland Mendy</p>
+					</td>
+					<tr>
+						<td  colspan="3">
+							<p><b>Data Nascimento</b></p>
+							<p>08/06/1995</p>
+						</td>
+						</tr>
+					<tr>
+						<td colspan="3">
+							<p><b>Posição</b></p>
+							<p>Defesa</p>
+						</td>
+					</tr>
+				 </tr>
+                                 <tr>
+					<td rowspan="3"><img class="fotoJogador" src=""</td>
+					<td>
+						<p><b>Data Nascimento</b></p>
+						<p>Toni Kroos</p>
+					</td>
+					<tr>
+						<td  colspan="3">
+							<p><b>Data Nascimento</b></p>
+							<p>04/01/1990</p>
+						</td>
+						</tr>
+					<tr>
+						<td colspan="3">
+							<p><b>Posição</b></p>
+							<p>Médio</p>
+						</td>
+					</tr>
+				 </tr>
+                                 <tr>
+					<td rowspan="3"><img class="fotoJogador" src=""</td>
+					<td>
+						<p><b>Data Nascimento</b></p>
+						<p>Carlos Henrique Casimiro</p>
+					</td>
+					<tr>
+						<td  colspan="3">
+							<p><b>Data Nascimento</b></p>
+							<p>23/02/1992</p>
+						</td>
+						</tr>
+					<tr>
+						<td colspan="3">
+							<p><b>Posição</b></p>
+							<p>Médio</p>
+						</td>
+					</tr>
+				 </tr>
+                                 <tr>
+					<td rowspan="3"><img class="fotoJogador" src=""</td>
+					<td>
+						<p><b>Data Nascimento</b></p>
+						<p>Federico Santiago Valverde Dipetta</p>
+					</td>
+					<tr>
+						<td  colspan="3">
+							<p><b>Data Nascimento</b></p>
+							<p>22/07/1998</p>
+						</td>
+						</tr>
+					<tr>
+						<td colspan="3">
+							<p><b>Posição</b></p>
+							<p>Médio</p>
+						</td>
+					</tr>
+				 </tr>
+                                 <tr>
+					<td rowspan="3"><img class="fotoJogador" src=""</td>
+					<td>
+						<p><b>Data Nascimento</b></p>
+						<p>Lucas Vázquez Iglesias</p>
+					</td>
+					<tr>
+						<td  colspan="3">
+							<p><b>Data Nascimento</b></p>
+							<p>01/07/1991</p>
+						</td>
+						</tr>
+					<tr>
+						<td colspan="3">
+							<p><b>Posição</b></p>
+							<p>Médio</p>
+						</td>
+					</tr>
+				 </tr>
+                                 <tr>
+					<td rowspan="3"><img class="fotoJogador" src=""</td>
+					<td>
+						<p><b>Data Nascimento</b></p>
+						<p>Daniel Ceballos Fernández</p>
+					</td>
+					<tr>
+						<td  colspan="3">
+							<p><b>Data Nascimento</b></p>
+							<p>07/08/1996</p>
+						</td>
+						</tr>
+					<tr>
+						<td colspan="3">
+							<p><b>Posição</b></p>
+							<p>Médio</p>
+						</td>
+					</tr>
+				 </tr>
+                                 <tr>
+					<td rowspan="3"><img class="fotoJogador" src=""</td>
+					<td>
+						<p><b>Data Nascimento</b></p>
+						<p>Francisco Román  Alarcón</p>
+					</td>
+					<tr>
+						<td  colspan="3">
+							<p><b>Data Nascimento</b></p>
+							<p>21/04/1992</p>
+						</td>
+						</tr>
+					<tr>
+						<td colspan="3">
+							<p><b>Posição</b></p>
+							<p>Médio</p>
+						</td>
+					</tr>
+				 </tr>
+                                 <tr>
+					<td rowspan="3"><img class="fotoJogador" src=""</td>
+					<td>
+						<p><b>Data Nascimento</b></p>
+						<p>Eduardo Camavinga</p>
+					</td>
+					<tr>
+						<td  colspan="3">
+							<p><b>Data Nascimento</b></p>
+							<p>10/11/2002</p>
+						</td>
+						</tr>
+					<tr>
+						<td colspan="3">
+							<p><b>Posição</b></p>
+							<p>Médio</p>
+						</td>
+					</tr>
+				 </tr>
+                                 <tr>
+					<td rowspan="3"><img class="fotoJogador" src=""</td>
+					<td>
+						<p><b>Data Nascimento</b></p>
+						<p>Eden Hazard</p>
+					</td>
+					<tr>
+						<td  colspan="3">
+							<p><b>Data Nascimento</b></p>
+							<p>07/01/1991</p>
+						</td>
+						</tr>
+					<tr>
+						<td colspan="3">
+							<p><b>Posição</b></p>
+							<p>Avançado</p>
+						</td>
+					</tr>
+				 </tr>
+                                 <tr>
+					<td rowspan="3"><img class="fotoJogador" src=""</td>
+					<td>
+						<p><b>Data Nascimento</b></p>
+						<p>Karim Benzema</p>
+					</td>
+					<tr>
+						<td  colspan="3">
+							<p><b>Data Nascimento</b></p>
+							<p>19/12/1987</p>
+						</td>
+						</tr>
+					<tr>
+						<td colspan="3">
+							<p><b>Posição</b></p>
+							<p>Avançado</p>
+						</td>
+					</tr>
+				 </tr>
+                                 <tr>
+					<td rowspan="3"><img class="fotoJogador" src=""</td>
+					<td>
+						<p><b>Data Nascimento</b></p>
+						<p>Marco Asensio Willemsen</p>
+					</td>
+					<tr>
+						<td  colspan="3">
+							<p><b>Data Nascimento</b></p>
+							<p>21/01/1996</p>
+						</td>
+						</tr>
+					<tr>
+						<td colspan="3">
+							<p><b>Posição</b></p>
+							<p>Avançado</p>
+						</td>
+					</tr>
+				 </tr>
+                                 <tr>
+					<td rowspan="3"><img class="fotoJogador" src=""</td>
+					<td>
+						<p><b>Data Nascimento</b></p>
+						<p>Gareth Bale</p>
+					</td>
+					<tr>
+						<td  colspan="3">
+							<p><b>Data Nascimento</b></p>
+							<p>16/07/1989</p>
+						</td>
+						</tr>
+					<tr>
+						<td colspan="3">
+							<p><b>Posição</b></p>
+							<p>Avançado</p>
+						</td>
+					</tr>
+				 </tr>
 			</table>
 		</div>
 
