--- a/principalmasc.html
+++ b/principalmasc.html
@@ -32,7 +32,7 @@
 				<tr>
 					<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/01_courtois.png"</td>
 					<td>
-						<p><b>Data Nascimento</b></p>
+						<p><b>Nome</b></p>
 						<p>Thibaut Courtois</p>
 					</td>
 					<tr>
@@ -60,7 +60,7 @@
 				<tr>
 					<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/02_carvajal.png"</td>
 					<td>
-						<p><b>Data Nascimento</b></p>
+						<p><b>Nome</b></p>
 						<p>Daniel Carvajal Ramos</p>
 					</td>
 					<tr>
@@ -88,7 +88,7 @@
 				<tr>
 					<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/03_militao.png"</td>
 					<td>
-						<p><b>Data Nascimento</b></p>
+						<p><b>Nome</b></p>
 						<p>Éder Gabriel Militão</p>
 					</td>
 					<tr>
@@ -116,7 +116,7 @@
 				<tr>
 					<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/04_alaba.png"</td>
 					<td>
-						<p><b>Data Nascimento</b></p>
+						<p><b>Nome</b></p>
 						<p>David Alaba</p>
 					</td>
 					<tr>
@@ -144,7 +144,7 @@
 				<tr>
 					<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/05_valejo.png"</td>
 					<td>
-						<p><b>Data Nascimento</b></p>
+						<p><b>Nome</b></p>
 						<p>Jesús Vallejo Lázaro</p>
 					</td>
 					<tr>
@@ -167,7 +167,7 @@
 				<tr>
 					<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/06_navajo.png"</td>
 					<td>
-						<p><b>Data Nascimento</b></p>
+						<p><b>Nome</b></p>
 						<p>José I. Fernández Iglesias</p>
 					</td>
 					<tr>
@@ -191,7 +191,7 @@
 				<tr>
 					<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/012_marcelo.png"</td>
 					<td>
-						<p><b>Data Nascimento</b></p>
+						<p><b>Nome</b></p>
 						<p>Marcelo Vieira da Silva</p>
 					</td>
 					<tr>
@@ -215,7 +215,7 @@
 				<tr>
 					<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/023_mendy.png"</td>
 					<td>
-						<p><b>Data Nascimento</b></p>
+						<p><b>Nome</b></p>
 						<p>Ferland Mendy</p>
 					</td>
 					<tr>
@@ -238,7 +238,7 @@
 				<tr>
 					<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/08_kroos.png"</td>
 					<td>
-						<p><b>Data Nascimento</b></p>
+						<p><b>Nome</b></p>
 						<p>Toni Kroos</p>
 					</td>
 					<tr>
@@ -261,7 +261,7 @@
 				<tr>
 					<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/014_casemiro.png"</td>
 					<td>
-						<p><b>Data Nascimento</b></p>
+						<p><b>Nome</b></p>
 						<p>Carlos Henrique Casimiro</p>
 					</td>
 					<tr>
