--- a/PaginaFilipeAfonso.html
+++ b/PaginaFilipeAfonso.html
@@ -31,7 +31,7 @@
 		  Adoro video jogos e desporto. </p>
 	 	
 		<div id="imagem">
-                        ><img src="C:\Users\Utilizador\Desktop\Filipe.jpg" width="400" height="300"></td>
+                        ><img src="Images/filipe1.jpeg" width="400" height="300"></td>
 		</div>				
 		
 		 <hr></hr>
@@ -58,8 +58,8 @@
        <p> Jogo video jogos desde os meus 2anos ja fui jogador semi pro de clash royale durante cerca de 4 anos e passei por organizações conhecidas em portugal como ForTheWin e Panthers.
        O meu pai e informatico entao desde sempre tive ligacao com os computadores e acho que posso dizer que e dai que vem o meu gosto pelo que tem a ver com computadores, jogos, informática no geral! </p>
        <div id="imagem">
-                        <img src="C:\Users\Utilizador\Pictures\Camera Roll\FTW Clash.jpg" alt="FTW Clash" width="500" height="333"></td>
-                        <img src="C:\Users\Utilizador\Pictures\Camera Roll\Panthers Clash.jpeg" width="500" height="333"></td>
+                        <img src="Images/filipe2.jpeg"></td>
+                        <img src="Images/filipe3.jpeg" width="500" height="333"></td>
 		</div>
 
 	</body>
