--- a/principalmasc.html
+++ b/principalmasc.html
@@ -576,8 +576,534 @@
 	</div>
 
 	<div id="Feminino" class="tabcontent">
-		<h3>Paris</h3>
-		<p>Paris is the capital of France.</p> 
+		<h3>Feminino</h3>
+		<center>
+			<div class="fotoJogador">
+				<table class="table">
+					<tr>
+						<th>Jogador</th>
+						<th>Stats</th>
+					</tr>
+					<tr>
+						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/01_courtois.png"</td>
+						<td>
+							<p><b>Data Nascimento</b></p>
+							<p>Thibaut Courtois</p>
+						</td>
+						<tr>
+							<td  colspan="3">
+								<p><b>Data Nascimento</b></p>
+								<p>11/05/1992</p>
+							</td>
+							</tr>
+						<tr>
+							<td colspan="3">
+								<p><b>Posição</b></p>
+								<p>Guarda-redes</p>
+							</td>
+						</tr>
+					</tr>
+				</table>
+			</div>
+
+			<div class="fotoJogador">
+				<table class="table">
+					<tr>
+						<th>Jogador</th>
+						<th>Stats</th>
+					</tr>
+					<tr>
+						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/02_carvajal.png"</td>
+						<td>
+							<p><b>Data Nascimento</b></p>
+							<p>Daniel Carvajal Ramos</p>
+						</td>
+						<tr>
+							<td  colspan="3">
+								<p><b>Data Nascimento</b></p>
+								<p>11/01/1992</p>
+							</td>
+							</tr>
+						<tr>
+							<td colspan="3">
+								<p><b>Posição</b></p>
+								<p>Defesa</p>
+							</td>
+						</tr>
+					</tr>
+				</table>
+			</div>
+
+			<div class="fotoJogador">
+				<table class="table">
+					<tr>
+						<th>Jogador</th>
+						<th>Stats</th>
+					</tr>
+					<tr>
+						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/03_militao.png"</td>
+						<td>
+							<p><b>Data Nascimento</b></p>
+							<p>Éder Gabriel Militão</p>
+						</td>
+						<tr>
+							<td  colspan="3">
+								<p><b>Data Nascimento</b></p>
+								<p>18/01/1998</p>
+							</td>
+							</tr>
+						<tr>
+							<td colspan="3">
+								<p><b>Posição</b></p>
+								<p>Defesa</p>
+							</td>
+						</tr>
+					</tr>
+				</table>
+			</div>
+
+			<div class="fotoJogador">
+				<table class="table">
+					<tr>
+						<th>Jogador</th>
+						<th>Stats</th>
+					</tr>
+					<tr>
+						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/04_alaba.png"</td>
+						<td>
+							<p><b>Data Nascimento</b></p>
+							<p>David Alaba</p>
+						</td>
+						<tr>
+							<td  colspan="3">
+								<p><b>Data Nascimento</b></p>
+								<p>24/06/1992</p>
+							</td>
+							</tr>
+						<tr>
+							<td colspan="3">
+								<p><b>Posição</b></p>
+								<p>Defesa</p>
+							</td>
+						</tr>
+					</tr>
+				</table>
+			</div>
+
+			<div class="fotoJogador">
+				<table class="table">
+					<tr>
+						<th>Jogador</th>
+						<th>Stats</th>
+					</tr>
+					<tr>
+						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/05_valejo.png"</td>
+						<td>
+							<p><b>Data Nascimento</b></p>
+							<p>Jesús Vallejo Lázaro</p>
+						</td>
+						<tr>
+							<td  colspan="3">
+								<p><b>Data Nascimento</b></p>
+								<p>05/01/1997</p>
+							</td>
+							</tr>
+						<tr>
+							<td colspan="3">
+								<p><b>Posição</b></p>
+								<p>Defesa</p>
+							</td>
+						</tr>
+					</tr>
+				</table>
+			</div>
+
+			<div class="fotoJogador">
+				<table class="table">
+					<tr>
+						<th>Jogador</th>
+						<th>Stats</th>
+					</tr>
+					<tr>
+						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/06_navajo.png"</td>
+						<td>
+							<p><b>Data Nascimento</b></p>
+							<p>José I. Fernández Iglesias</p>
+						</td>
+						<tr>
+							<td  colspan="3">
+								<p><b>Data Nascimento</b></p>
+								<p>18/01/1990</p>
+							</td>
+							</tr>
+						<tr>
+							<td colspan="3">
+								<p><b>Posição</b></p>
+								<p>Defesa</p>
+							</td>
+						</tr>
+					</tr>
+				</table>
+			</div>
+
+			<div class="fotoJogador">
+				<table class="table">
+					<tr>
+						<th>Jogador</th>
+						<th>Stats</th>
+					</tr>
+					<tr>
+						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/012_marcelo.png"</td>
+						<td>
+							<p><b>Data Nascimento</b></p>
+							<p>Marcelo Vieira da Silva</p>
+						</td>
+						<tr>
+							<td  colspan="3">
+								<p><b>Data Nascimento</b></p>
+								<p>12/05/1988</p>
+							</td>
+							</tr>
+						<tr>
+							<td colspan="3">
+								<p><b>Posição</b></p>
+								<p>Defesa</p>
+							</td>
+						</tr>
+					</tr>
+				</table>
+			</div>
+
+			<div class="fotoJogador">
+				<table class="table">
+					<tr>
+						<th>Jogador</th>
+						<th>Stats</th>
+					</tr>
+					<tr>
+						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/023_mendy.png"</td>
+						<td>
+							<p><b>Data Nascimento</b></p>
+							<p>Ferland Mendy</p>
+						</td>
+						<tr>
+							<td  colspan="3">
+								<p><b>Data Nascimento</b></p>
+								<p>08/06/1995</p>
+							</td>
+							</tr>
+						<tr>
+							<td colspan="3">
+								<p><b>Posição</b></p>
+								<p>Defesa</p>
+							</td>
+						</tr>
+					</tr>
+				</table>
+			</div>
+			
+			<div class="fotoJogador">
+				<table class="table">
+					<tr>
+						<th>Jogador</th>
+						<th>Stats</th>
+					</tr>
+					<tr>
+						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/08_kroos.png"</td>
+						<td>
+							<p><b>Data Nascimento</b></p>
+							<p>Toni Kroos</p>
+						</td>
+						<tr>
+							<td  colspan="3">
+								<p><b>Data Nascimento</b></p>
+								<p>04/01/1990</p>
+							</td>
+							</tr>
+						<tr>
+							<td colspan="3">
+								<p><b>Posição</b></p>
+								<p>Médio</p>
+							</td>
+						</tr>
+					</tr>
+				</table>
+			</div>
+
+			<div class="fotoJogador">
+				<table class="table">
+					<tr>
+						<th>Jogador</th>
+						<th>Stats</th>
+					</tr>
+					<tr>
+						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/014_casemiro.png"</td>
+						<td>
+							<p><b>Data Nascimento</b></p>
+							<p>Carlos Henrique Casimiro</p>
+						</td>
+						<tr>
+							<td  colspan="3">
+								<p><b>Data Nascimento</b></p>
+								<p>23/02/1992</p>
+							</td>
+							</tr>
+						<tr>
+							<td colspan="3">
+								<p><b>Posição</b></p>
+								<p>Médio</p>
+							</td>
+						</tr>
+					</tr>
+				</table>
+			</div>
+
+			<div class="fotoJogador">
+				<table class="table">
+					<tr>
+						<th>Jogador</th>
+						<th>Stats</th>
+					</tr>
+					<tr>
+						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/015_valverde.png"</td>
+						<td>
+							<p><b>Nome</b></p>
+							<p>Federico Santiago Valverde Dipetta</p>
+						</td>
+						<tr>
+							<td  colspan="3">
+								<p><b>Data Nascimento</b></p>
+								<p>22/07/1998</p>
+							</td>
+							</tr>
+						<tr>
+							<td colspan="3">
+								<p><b>Posição</b></p>
+								<p>Médio</p>
+							</td>
+						</tr>
+					</tr>
+				</table>
+			</div>
+
+			<div class="fotoJogador">
+				<table class="table">
+					<tr>
+						<th>Jogador</th>
+						<th>Stats</th>
+					</tr>
+					<tr>
+						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/017_lucas.png"</td>
+						<td>
+							<p><b>Nome</b></p>
+							<p>Lucas Vázquez Iglesias</p>
+						</td>
+						<tr>
+							<td  colspan="3">
+								<p><b>Data Nascimento</b></p>
+								<p>01/07/1991</p>
+							</td>
+							</tr>
+						<tr>
+							<td colspan="3">
+								<p><b>Posição</b></p>
+								<p>Médio</p>
+							</td>
+						</tr>
+					</tr>
+				</table>
+			</div>
+
+			<div class="fotoJogador">
+				<table class="table">
+					<tr>
+						<th>Jogador</th>
+						<th>Stats</th>
+					</tr>
+					<tr>
+						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/019_ceballos.png"</td>
+						<td>
+							<p><b>Nome</b></p>
+							<p>Daniel Ceballos Fernández</p>
+						</td>
+						<tr>
+							<td  colspan="3">
+								<p><b>Data Nascimento</b></p>
+								<p>07/08/1996</p>
+							</td>
+							</tr>
+						<tr>
+							<td colspan="3">
+								<p><b>Posição</b></p>
+								<p>Médio</p>
+							</td>
+						</tr>
+					</tr>
+				</table>
+			</div>
+			<div class="fotoJogador">
+				<table class="table">
+					<tr>
+						<th>Jogador</th>
+						<th>Stats</th>
+					</tr>
+					<tr>
+						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/022_isco.png"</td>
+						<td>
+							<p><b>Nome</b></p>
+							<p>Francisco Román  Alarcón</p>
+						</td>
+						<tr>
+							<td  colspan="3">
+								<p><b>Data Nascimento</b></p>
+								<p>21/04/1992</p>
+							</td>
+							</tr>
+						<tr>
+							<td colspan="3">
+								<p><b>Posição</b></p>
+								<p>Médio</p>
+							</td>
+						</tr>
+					</tr>
+				</table>
+			</div>
+			<div class="fotoJogador">
+				<table class="table">
+					<tr>
+						<th>Jogador</th>
+						<th>Stats</th>
+					</tr>
+					<tr>
+						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/025_camavinga.png"</td>
+						<td>
+							<p><b>Nome</b></p>
+							<p>Eduardo Camavinga</p>
+						</td>
+						<tr>
+							<td  colspan="3">
+								<p><b>Data Nascimento</b></p>
+								<p>10/11/2002</p>
+							</td>
+							</tr>
+						<tr>
+							<td colspan="3">
+								<p><b>Posição</b></p>
+								<p>Médio</p>
+							</td>
+						</tr>
+					</tr>
+				</table>
+			</div>
+			<div class="fotoJogador">
+				<table class="table">
+					<tr>
+						<th>Jogador</th>
+						<th>Stats</th>
+					</tr>
+					<tr>
+						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/07_hazard.png"</td>
+						<td>
+							<p><b>Nome</b></p>
+							<p>Eden Hazard</p>
+						</td>
+						<tr>
+							<td  colspan="3">
+								<p><b>Data Nascimento</b></p>
+								<p>07/01/1991</p>
+							</td>
+							</tr>
+						<tr>
+							<td colspan="3">
+								<p><b>Posição</b></p>
+								<p>Avançado</p>
+							</td>
+						</tr>
+					</tr>
+				</table>
+			</div>
+			<div class="fotoJogador">
+				<table class="table">
+					<tr>
+						<th>Jogador</th>
+						<th>Stats</th>
+					</tr>
+					<tr>
+						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/09_benzema.png"</td>
+						<td>
+							<p><b>Nome</b></p>
+							<p>Karim Benzema</p>
+						</td>
+						<tr>
+							<td  colspan="3">
+								<p><b>Data Nascimento</b></p>
+								<p>19/12/1987</p>
+							</td>
+							</tr>
+						<tr>
+							<td colspan="3">
+								<p><b>Posição</b></p>
+								<p>Avançado</p>
+							</td>
+						</tr>
+					</tr>
+				</table>
+			</div>
+			<div class="fotoJogador">
+				<table class="table">
+					<tr>
+						<th>Jogador</th>
+						<th>Stats</th>
+					</tr>
+					<tr>
+						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/011_asensio.png"</td>
+						<td>
+							<p><b>Nome</b></p>
+							<p>Marco Asensio Willemsen</p>
+						</td>
+						<tr>
+							<td  colspan="3">
+								<p><b>Data Nascimento</b></p>
+								<p>21/01/1996</p>
+							</td>
+							</tr>
+						<tr>
+							<td colspan="3">
+								<p><b>Posição</b></p>
+								<p>Avançado</p>
+							</td>
+						</tr>
+					</tr>
+				</table>
+			</div>
+			<div class="fotoJogador">
+				<table class="table">
+					<tr>
+						<th>Jogador</th>
+						<th>Stats</th>
+					</tr>
+					<tr>
+						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/018_bale.png"</td>
+						<td>
+							<p><b>Nome</b></p>
+							<p>Gareth Bale</p>
+						</td>
+						<tr>
+							<td  colspan="3">
+								<p><b>Data Nascimento</b></p>
+								<p>16/07/1989</p>
+							</td>
+							</tr>
+						<tr>
+							<td colspan="3">
+								<p><b>Posição</b></p>
+								<p>Avançado</p>
+							</td>
+						</tr>
+					</tr>
+				</table>
+			</div>
+		</center>
 	</div>
 
 	<div id="EquipaB" class="tabcontent">
