--- a/principalmasc.html
+++ b/principalmasc.html
@@ -1107,8 +1107,8 @@
 	</div>
 
 	<div id="EquipaB" class="tabcontent">
-		<h3>Tokyo</h3>
-		<p>Tokyo is the capital of Japan.</p>
+		<h3>Equipa B</h3>
+		<p>Site em Manutenção!!! Teremos mais informação ASAP!!!</p>
 	</div>
 
 	<!--**************************************************************************-->
