--- a/principalmasc.html
+++ b/principalmasc.html
@@ -575,6 +575,8 @@
 		</center>
 	</div>
 
+	<!-- DIVISAO ENTRE MASC e FEM ***********************************************-->
+
 	<div id="Feminino" class="tabcontent">
 		<h3>Feminino</h3>
 		<center>
@@ -585,15 +587,15 @@
 						<th>Stats</th>
 					</tr>
 					<tr>
-						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/01_courtois.png"</td>
+						<td rowspan="3"><img class="fotoJogador" src="Images/FEMININA/01_misa.png"</td>
 						<td>
-							<p><b>Data Nascimento</b></p>
-							<p>Thibaut Courtois</p>
+							<p><b>Nome</b></p>
+							<p>María Isabel Rodríguez Rivero</p>
 						</td>
 						<tr>
 							<td  colspan="3">
 								<p><b>Data Nascimento</b></p>
-								<p>11/05/1992</p>
+								<p>22/07/1999</p>
 							</td>
 							</tr>
 						<tr>
@@ -613,15 +615,15 @@
 						<th>Stats</th>
 					</tr>
 					<tr>
-						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/02_carvajal.png"</td>
+						<td rowspan="3"><img class="fotoJogador" src="Images/FEMININA/02_robles.png"</td>
 						<td>
-							<p><b>Data Nascimento</b></p>
-							<p>Daniel Carvajal Ramos</p>
+							<p><b>Nome</b></p>
+							<p>Vaitiare Kenti Robles Salas</p>
 						</td>
 						<tr>
 							<td  colspan="3">
 								<p><b>Data Nascimento</b></p>
-								<p>11/01/1992</p>
+								<p>15/02/1991</p>
 							</td>
 							</tr>
 						<tr>
@@ -641,21 +643,21 @@
 						<th>Stats</th>
 					</tr>
 					<tr>
-						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/03_militao.png"</td>
+						<td rowspan="3"><img class="fotoJogador" src="Images/FEMININA/03_teresa.png"</td>
 						<td>
-							<p><b>Data Nascimento</b></p>
-							<p>Éder Gabriel Militão</p>
+							<p><b>Nome</b></p>
+							<p>Teresa Abelleira Dueñas</p>
 						</td>
 						<tr>
 							<td  colspan="3">
 								<p><b>Data Nascimento</b></p>
-								<p>18/01/1998</p>
+								<p>09/01/2000</p>
 							</td>
 							</tr>
 						<tr>
 							<td colspan="3">
 								<p><b>Posição</b></p>
-								<p>Defesa</p>
+								<p>Médio</p>
 							</td>
 						</tr>
 					</tr>
@@ -669,94 +671,10 @@
 						<th>Stats</th>
 					</tr>
 					<tr>
-						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/04_alaba.png"</td>
+						<td rowspan="3"><img class="fotoJogador" src="Images/FEMININA/04_peter.png"</td>
 						<td>
-							<p><b>Data Nascimento</b></p>
-							<p>David Alaba</p>
-						</td>
-						<tr>
-							<td  colspan="3">
-								<p><b>Data Nascimento</b></p>
-								<p>24/06/1992</p>
-							</td>
-							</tr>
-						<tr>
-							<td colspan="3">
-								<p><b>Posição</b></p>
-								<p>Defesa</p>
-							</td>
-						</tr>
-					</tr>
-				</table>
-			</div>
-
-			<div class="fotoJogador">
-				<table class="table">
-					<tr>
-						<th>Jogador</th>
-						<th>Stats</th>
-					</tr>
-					<tr>
-						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/05_valejo.png"</td>
-						<td>
-							<p><b>Data Nascimento</b></p>
-							<p>Jesús Vallejo Lázaro</p>
-						</td>
-						<tr>
-							<td  colspan="3">
-								<p><b>Data Nascimento</b></p>
-								<p>05/01/1997</p>
-							</td>
-							</tr>
-						<tr>
-							<td colspan="3">
-								<p><b>Posição</b></p>
-								<p>Defesa</p>
-							</td>
-						</tr>
-					</tr>
-				</table>
-			</div>
-
-			<div class="fotoJogador">
-				<table class="table">
-					<tr>
-						<th>Jogador</th>
-						<th>Stats</th>
-					</tr>
-					<tr>
-						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/06_navajo.png"</td>
-						<td>
-							<p><b>Data Nascimento</b></p>
-							<p>José I. Fernández Iglesias</p>
-						</td>
-						<tr>
-							<td  colspan="3">
-								<p><b>Data Nascimento</b></p>
-								<p>18/01/1990</p>
-							</td>
-							</tr>
-						<tr>
-							<td colspan="3">
-								<p><b>Posição</b></p>
-								<p>Defesa</p>
-							</td>
-						</tr>
-					</tr>
-				</table>
-			</div>
-
-			<div class="fotoJogador">
-				<table class="table">
-					<tr>
-						<th>Jogador</th>
-						<th>Stats</th>
-					</tr>
-					<tr>
-						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/012_marcelo.png"</td>
-						<td>
-							<p><b>Data Nascimento</b></p>
-							<p>Marcelo Vieira da Silva</p>
+							<p><b>Nome</b></p>
+							<p>Babett Peter</p>
 						</td>
 						<tr>
 							<td  colspan="3">
@@ -781,21 +699,105 @@
 						<th>Stats</th>
 					</tr>
 					<tr>
-						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/023_mendy.png"</td>
+						<td rowspan="3"><img class="fotoJogador" src="Images/FEMININA/05_ivana.png"></td>
 						<td>
-							<p><b>Data Nascimento</b></p>
-							<p>Ferland Mendy</p>
+							<p><b>Nome</b></p>
+							<p>Ivana Andrés Sanz</p>
 						</td>
 						<tr>
 							<td  colspan="3">
 								<p><b>Data Nascimento</b></p>
-								<p>08/06/1995</p>
+								<p>13/07/1994</p>
 							</td>
 							</tr>
 						<tr>
 							<td colspan="3">
 								<p><b>Posição</b></p>
 								<p>Defesa</p>
+							</td>
+						</tr>
+					</tr>
+				</table>
+			</div>
+
+			<div class="fotoJogador">
+				<table class="table">
+					<tr>
+						<th>Jogador</th>
+						<th>Stats</th>
+					</tr>
+					<tr>
+						<td rowspan="3"><img class="fotoJogador" src="Images/FEMININA/06_kaci.png"</td>
+						<td>
+							<p><b>Nome</b></p>
+							<p>Aurélie Anne Sophie Kaci</p>
+						</td>
+						<tr>
+							<td  colspan="3">
+								<p><b>Data Nascimento</b></p>
+								<p>19/12/1989</p>
+							</td>
+							</tr>
+						<tr>
+							<td colspan="3">
+								<p><b>Posição</b></p>
+								<p>Médio</p>
+							</td>
+						</tr>
+					</tr>
+				</table>
+			</div>
+
+			<div class="fotoJogador">
+				<table class="table">
+					<tr>
+						<th>Jogador</th>
+						<th>Stats</th>
+					</tr>
+					<tr>
+						<td rowspan="3"><img class="fotoJogador" src="Images/FEMININA/07_olga.png"</td>
+						<td>
+							<p><b>Nome</b></p>
+							<p>Olga Carmona García</p>
+						</td>
+						<tr>
+							<td  colspan="3">
+								<p><b>Data Nascimento</b></p>
+								<p>12/06/2000</p>
+							</td>
+							</tr>
+						<tr>
+							<td colspan="3">
+								<p><b>Posição</b></p>
+								<p>Defesa</p>
+							</td>
+						</tr>
+					</tr>
+				</table>
+			</div>
+
+			<div class="fotoJogador">
+				<table class="table">
+					<tr>
+						<th>Jogador</th>
+						<th>Stats</th>
+					</tr>
+					<tr>
+						<td rowspan="3"><img class="fotoJogador" src="Images/FEMININA/08_maite.png"</td>
+						<td>
+							<p><b>Nome</b></p>
+							<p>Maite Oroz Areta</p>
+						</td>
+						<tr>
+							<td  colspan="3">
+								<p><b>Data Nascimento</b></p>
+								<p>25/03/1998</p>
+							</td>
+							</tr>
+						<tr>
+							<td colspan="3">
+								<p><b>Posição</b></p>
+								<p>Médio</p>
 							</td>
 						</tr>
 					</tr>
@@ -837,21 +839,21 @@
 						<th>Stats</th>
 					</tr>
 					<tr>
-						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/014_casemiro.png"</td>
+						<td rowspan="3"><img class="fotoJogador" src="Images/FEMININA/09_asllani.png"</td>
 						<td>
-							<p><b>Data Nascimento</b></p>
-							<p>Carlos Henrique Casimiro</p>
+							<p><b>Nome</b></p>
+							<p>Kosovare Asllani</p>
 						</td>
 						<tr>
 							<td  colspan="3">
 								<p><b>Data Nascimento</b></p>
-								<p>23/02/1992</p>
+								<p>29/07/1989</p>
 							</td>
 							</tr>
 						<tr>
 							<td colspan="3">
 								<p><b>Posição</b></p>
-								<p>Médio</p>
+								<p>Avançado</p>
 							</td>
 						</tr>
 					</tr>
@@ -865,21 +867,21 @@
 						<th>Stats</th>
 					</tr>
 					<tr>
-						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/015_valverde.png"</td>
+						<td rowspan="3"><img class="fotoJogador" src="Images/FEMININA/010_esther.png"</td>
 						<td>
 							<p><b>Nome</b></p>
-							<p>Federico Santiago Valverde Dipetta</p>
+							<p>Esther González Rodríguez</p>
 						</td>
 						<tr>
 							<td  colspan="3">
 								<p><b>Data Nascimento</b></p>
-								<p>22/07/1998</p>
+								<p>08/12/1992</p>
 							</td>
 							</tr>
 						<tr>
 							<td colspan="3">
 								<p><b>Posição</b></p>
-								<p>Médio</p>
+								<p>Avançado</p>
 							</td>
 						</tr>
 					</tr>
@@ -893,21 +895,21 @@
 						<th>Stats</th>
 					</tr>
 					<tr>
-						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/017_lucas.png"</td>
+						<td rowspan="3"><img class="fotoJogador" src="Images/FEMININA/011_cardona.png"</td>
 						<td>
 							<p><b>Nome</b></p>
-							<p>Lucas Vázquez Iglesias</p>
+							<p>Marta Cardona de Miguel</p>
 						</td>
 						<tr>
 							<td  colspan="3">
 								<p><b>Data Nascimento</b></p>
-								<p>01/07/1991</p>
+								<p>26/05/1995</p>
 							</td>
 							</tr>
 						<tr>
 							<td colspan="3">
 								<p><b>Posição</b></p>
-								<p>Médio</p>
+								<p>Avançado</p>
 							</td>
 						</tr>
 					</tr>
@@ -921,15 +923,177 @@
 						<th>Stats</th>
 					</tr>
 					<tr>
-						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/019_ceballos.png"</td>
+						<td rowspan="3"><img class="fotoJogador" src="Images/FEMININA/012_lorena.png"</td>
 						<td>
 							<p><b>Nome</b></p>
-							<p>Daniel Ceballos Fernández</p>
+							<p>Lorena Navarro Domínguez</p>
 						</td>
 						<tr>
 							<td  colspan="3">
 								<p><b>Data Nascimento</b></p>
-								<p>07/08/1996</p>
+								<p>11/11/2000</p>
+							</td>
+							</tr>
+						<tr>
+							<td colspan="3">
+								<p><b>Posição</b></p>
+								<p>Avançado</p>
+							</td>
+						</tr>
+					</tr>
+				</table>
+			</div>
+			<div class="fotoJogador">
+				<table class="table">
+					<tr>
+						<th>Jogador</th>
+						<th>Stats</th>
+					</tr>
+					<tr>
+						<td rowspan="3"><img class="fotoJogador" src="Images/FEMININA/014_nahikari.png"</td>
+						<td>
+							<p><b>Nome</b></p>
+							<p>Nahikari García Pérez</p>
+						</td>
+						<tr>
+							<td  colspan="3">
+								<p><b>Data Nascimento</b></p>
+								<p>10/03/1997</p>
+							</td>
+							</tr>
+						<tr>
+							<td colspan="3">
+								<p><b>Posição</b></p>
+								<p>Avançado</p>
+							</td>
+						</tr>
+					</tr>
+				</table>
+			</div>
+			<div class="fotoJogador">
+				<table class="table">
+					<tr>
+						<th>Jogador</th>
+						<th>Stats</th>
+					</tr>
+					<tr>
+						<td rowspan="3"><img class="fotoJogador" src="Images/FEMININA/015_claudia.png"</td>
+						<td>
+							<p><b>Nome</b></p>
+							<p>Claudia Florentino Vivó</p>
+						</td>
+						<tr>
+							<td  colspan="3">
+								<p><b>Data Nascimento</b></p>
+								<p>10/03/1998</p>
+							</td>
+							</tr>
+						<tr>
+							<td colspan="3">
+								<p><b>Posição</b></p>
+								<p>Defesa</p>
+							</td>
+						</tr>
+					</tr>
+				</table>
+			</div>
+			<div class="fotoJogador">
+				<table class="table">
+					<tr>
+						<th>Jogador</th>
+						<th>Stats</th>
+					</tr>
+					<tr>
+						<td rowspan="3"><img class="fotoJogador" src="Images/FEMININA/016_moller.png"</td>
+						<td>
+							<p><b>Nome</b></p>
+							<p>Caroline Møller Hansen</p>
+						</td>
+						<tr>
+							<td  colspan="3">
+								<p><b>Data Nascimento</b></p>
+								<p>19/12/1998</p>
+							</td>
+							</tr>
+						<tr>
+							<td colspan="3">
+								<p><b>Posição</b></p>
+								<p>Avançado</p>
+							</td>
+						</tr>
+					</tr>
+				</table>
+			</div>
+			<div class="fotoJogador">
+				<table class="table">
+					<tr>
+						<th>Jogador</th>
+						<th>Stats</th>
+					</tr>
+					<tr>
+						<td rowspan="3"><img class="fotoJogador" src="Images/FEMININA/017_corredera.png"</td>
+						<td>
+							<p><b>Nome</b></p>
+							<p>Marta Corredera Rueda</p>
+						</td>
+						<tr>
+							<td  colspan="3">
+								<p><b>Data Nascimento</b></p>
+								<p>08/08/1991</p>
+							</td>
+							</tr>
+						<tr>
+							<td colspan="3">
+								<p><b>Posição</b></p>
+								<p>Defesa</p>
+							</td>
+						</tr>
+					</tr>
+				</table>
+			</div>
+			<div class="fotoJogador">
+				<table class="table">
+					<tr>
+						<th>Jogador</th>
+						<th>Stats</th>
+					</tr>
+					<tr>
+						<td rowspan="3"><img class="fotoJogador" src="Images/FEMININA/018_rodriguez.png"</td>
+						<td>
+							<p><b>Nome</b></p>
+							<p>Lucía Rodríguez Herrero</p>
+						</td>
+						<tr>
+							<td  colspan="3">
+								<p><b>Data Nascimento</b></p>
+								<p>24/05/1999</p>
+							</td>
+							</tr>
+						<tr>
+							<td colspan="3">
+								<p><b>Posição</b></p>
+								<p>Defesa</p>
+							</td>
+						</tr>
+					</tr>
+				</table>
+			</div>
+			<div class="fotoJogador">
+				<table class="table">
+					<tr>
+						<th>Jogador</th>
+						<th>Stats</th>
+					</tr>
+					<tr>
+						<td rowspan="3"><img class="fotoJogador" src="Images/FEMININA/021_zornoza.png"></td>
+						<td>
+							<p><b>Nome</b></p>
+							<p>Claudia Zornoza Sánchez</p>
+						</td>
+						<tr>
+							<td  colspan="3">
+								<p><b>Data Nascimento</b></p>
+								<p>20/10/1990</p>
 							</td>
 							</tr>
 						<tr>
@@ -948,69 +1112,15 @@
 						<th>Stats</th>
 					</tr>
 					<tr>
-						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/022_isco.png"</td>
+						<td rowspan="3"><img class="fotoJogador" src="Images/FEMININA/022_athenea.png"></td>
 						<td>
 							<p><b>Nome</b></p>
-							<p>Francisco Román  Alarcón</p>
+							<p>Athenea del Castillo Beivide</p>
 						</td>
 						<tr>
 							<td  colspan="3">
 								<p><b>Data Nascimento</b></p>
-								<p>21/04/1992</p>
-							</td>
-							</tr>
-						<tr>
-							<td colspan="3">
-								<p><b>Posição</b></p>
-								<p>Médio</p>
-							</td>
-						</tr>
-					</tr>
-				</table>
-			</div>
-			<div class="fotoJogador">
-				<table class="table">
-					<tr>
-						<th>Jogador</th>
-						<th>Stats</th>
-					</tr>
-					<tr>
-						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/025_camavinga.png"</td>
-						<td>
-							<p><b>Nome</b></p>
-							<p>Eduardo Camavinga</p>
-						</td>
-						<tr>
-							<td  colspan="3">
-								<p><b>Data Nascimento</b></p>
-								<p>10/11/2002</p>
-							</td>
-							</tr>
-						<tr>
-							<td colspan="3">
-								<p><b>Posição</b></p>
-								<p>Médio</p>
-							</td>
-						</tr>
-					</tr>
-				</table>
-			</div>
-			<div class="fotoJogador">
-				<table class="table">
-					<tr>
-						<th>Jogador</th>
-						<th>Stats</th>
-					</tr>
-					<tr>
-						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/07_hazard.png"</td>
-						<td>
-							<p><b>Nome</b></p>
-							<p>Eden Hazard</p>
-						</td>
-						<tr>
-							<td  colspan="3">
-								<p><b>Data Nascimento</b></p>
-								<p>07/01/1991</p>
+								<p>24/10/2000</p>
 							</td>
 							</tr>
 						<tr>
@@ -1029,75 +1139,21 @@
 						<th>Stats</th>
 					</tr>
 					<tr>
-						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/09_benzema.png"</td>
+						<td rowspan="3"><img class="fotoJogador" src="Images/FEMININA/024_gerard.png"></td>
 						<td>
 							<p><b>Nome</b></p>
-							<p>Karim Benzema</p>
+							<p>Méline Gérard</p>
 						</td>
 						<tr>
 							<td  colspan="3">
 								<p><b>Data Nascimento</b></p>
-								<p>19/12/1987</p>
+								<p>30/05/1990</p>
 							</td>
 							</tr>
 						<tr>
 							<td colspan="3">
 								<p><b>Posição</b></p>
-								<p>Avançado</p>
-							</td>
-						</tr>
-					</tr>
-				</table>
-			</div>
-			<div class="fotoJogador">
-				<table class="table">
-					<tr>
-						<th>Jogador</th>
-						<th>Stats</th>
-					</tr>
-					<tr>
-						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/011_asensio.png"</td>
-						<td>
-							<p><b>Nome</b></p>
-							<p>Marco Asensio Willemsen</p>
-						</td>
-						<tr>
-							<td  colspan="3">
-								<p><b>Data Nascimento</b></p>
-								<p>21/01/1996</p>
-							</td>
-							</tr>
-						<tr>
-							<td colspan="3">
-								<p><b>Posição</b></p>
-								<p>Avançado</p>
-							</td>
-						</tr>
-					</tr>
-				</table>
-			</div>
-			<div class="fotoJogador">
-				<table class="table">
-					<tr>
-						<th>Jogador</th>
-						<th>Stats</th>
-					</tr>
-					<tr>
-						<td rowspan="3"><img class="fotoJogador" src="Images/PRINCIPAL/018_bale.png"</td>
-						<td>
-							<p><b>Nome</b></p>
-							<p>Gareth Bale</p>
-						</td>
-						<tr>
-							<td  colspan="3">
-								<p><b>Data Nascimento</b></p>
-								<p>16/07/1989</p>
-							</td>
-							</tr>
-						<tr>
-							<td colspan="3">
-								<p><b>Posição</b></p>
-								<p>Avançado</p>
+								<p>Guarda-redes</p>
 							</td>
 						</tr>
 					</tr>
